# formatify

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml
docs/: design.md
src/formatify_py/: main.py
tests/: test_main.py
