[project]
name = "formatify"
version = "1.0.0"
description = "Library to infer and standardize datetime formats from timestamp samples."
readme = "README.md"
authors = [
  { name = "AR", email = "roy.aalekh@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.0",
  "build>=0.9"
]

[project.urls]
"Homepage"   = "https://github.com/PieceWiseProjects/formatify"
"Repository" = "https://github.com/PieceWiseProjects/formatify"

[build-system]
requires    = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select      = ["E", "F", "W", "C90"]
fix         = true

[tool.ruff.mccabe]
# allow up to 30 McCabe complexity (raise from the default 10)
max-complexity = 30
